# keylog-1

./: .gitignore  AUTHORS  Makefile.am  README  bootstrap.sh  configure.ac  keylog.c  keymap.txt  make_keymap.pl
gui/: .gitignore  LICENSE  Main.hs  Makefile  README  keyloggui.cabal
src/: Makefile.am  compile_opts.inc  keylog.c  keymap.txt  make_keymap.pl  make_xkeymap.pl  xkeylog.c  xkeymap.txt
